--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="window" aria-label="Content">
         <div class="title-bar">
-          <a class="title-bar-text" rel="author" href="{{ "/" | relative_url }}"><strong>{{ site.title | escape }}</strong></a>
+          <strong class="title-bar-text">{{ site.title | escape }}</strong>
         </div>
         <div class="window-body">
           {%- include nav.html -%}
