--- a/assets/main.scss
+++ b/assets/main.scss
@@ -309,7 +309,7 @@ input[type=range].has-box-indicator::-moz-range-thumb {
     font-size: 11px;
     background: silver;
     padding: 3px;
-    width: 12in;
+    max-width: 12in;
     margin: 0 auto
 }
 
