--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1348,6 +1348,7 @@ figure.highlight {
 body {
   font: 12px/1.45 simsun, simhei, dengxian, serif;
   background-color: #3A6EA5;
+  overflow: hidden;
 }
 
 a, a:hover, a:active, a:visited {
