--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
   </a>
   <vr></vr>
   <a class="navigation-icon" href="/buddha">
-    <img src="/assets/img/ico/bulb_16.png" alt="">
+    <img src="/assets/img/ico/warning_circle_16.png" alt="">
     <span>布袋和尚简介</span>
   </a>
 </nav>
