--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   </a>
   <a class="navigation-icon" href="/tofu">
     <img src="/assets/img/ico/help_16.png" alt="">
-    <span>豆制品</span>
+    <span>产品</span>
   </a>
   <a class="navigation-icon" href="/about">
     <img src="/assets/img/ico/question_16.png" alt="">
