--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,10 +1,3 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MVB3SC8YVX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-MVB3SC8YVX');
-</script>
+<script></script>
 
   
