--- a/assets/main.scss
+++ b/assets/main.scss
@@ -309,16 +309,17 @@ figure img {
   }
 }
 
-.inn-pictures .sold em {
+.innpic .sold em {
   color: red;
+  font-size: 11px;
   font-weight: bold;
 }
 
-.inn-pictures figcaption sub {
+.innpic figcaption sub {
   vertical-align: bottom;
 }
 
-.inn-pictures .arrow {
+.innpic .arrow {
   font-size: 85%;
   margin-right: 2px;
   position: relative;
