--- a/assets/main.scss
+++ b/assets/main.scss
@@ -138,6 +138,10 @@ pre {
   background-color: transparent;
 }
 
+.text-alert {
+  color: red;
+}
+
 .balloon {
     background-color: #ffffe1;
     border: black 1px solid;
