--- a/assets/main.scss
+++ b/assets/main.scss
@@ -60,7 +60,7 @@ body {
 
 a, a:hover, a:active, a:visited {
   color: blue;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 h1, h2, h3, h4, h5, h6 {
