--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,19 +1,19 @@
 <nav class="navigation-icons">
   <a class="navigation-icon" href="/">
-    <img src="/assets/img/ico/home_16.png" alt="">
+    <img src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/img/ico/home_16.png" alt="">
     <span>主页</span>
   </a>
   <a class="navigation-icon" href="/tofu">
-    <img src="/assets/img/ico/help_16.png" alt="">
+    <img src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/img/ico/help_16.png" alt="">
     <span>产品</span>
   </a>
   <a class="navigation-icon" href="/about">
-    <img src="/assets/img/ico/question_16.png" alt="">
+    <img src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/img/ico/question_16.png" alt="">
     <span>关于</span>
   </a>
   <vr></vr>
   <a class="navigation-icon" href="/buddha">
-    <img src="/assets/img/ico/warning_circle_16.png" alt="">
+    <img src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/img/ico/warning_circle_16.png" alt="">
     <span>布袋和尚简介</span>
   </a>
 </nav>
