--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,10 @@
   <title>{% if page.title %}{{ page.title }}·{{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   {%- seo title=false -%}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/styles.css">
+  {%- unless page.url == '/amp' -%}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.css">
+    <script src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.js"></script>
+    {%- endunless -%}
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
