--- a/_includes/amplitude.html
+++ b/_includes/amplitude.html
@@ -1,4 +1,3 @@
-<!-- Amplitude Player -->
 <div id="amplitude-player">
     <div id="amplitude-left">
         <img data-amplitude-song-info="cover_art_url" class="album-art"/>
@@ -49,3 +48,66 @@
         </div>
     </div>
 </div>
+
+<script>
+    let songElements = document.getElementsByClassName('song');
+    
+    for( var i = 0; i < songElements.length; i++ ) {
+        songElements[i].addEventListener('mouseover', function(){
+            this.style.backgroundColor = '#00A0FF';
+            this.querySelectorAll('.song-meta-data .song-title')[0].style.color = '#FFFFFF';
+            this.querySelectorAll('.song-meta-data .song-artist')[0].style.color = '#FFFFFF';
+            if( !this.classList.contains('amplitude-active-song-container') ){
+                this.querySelectorAll('.play-button-container')[0].style.display = 'block';
+            }
+            this.querySelectorAll('.song-duration')[0].style.color = '#FFFFFF';
+        });
+    
+        songElements[i].addEventListener('mouseout', function(){
+            this.style.backgroundColor = '#FFFFFF';
+            this.querySelectorAll('.song-meta-data .song-title')[0].style.color = '#272726';
+            this.querySelectorAll('.song-meta-data .song-artist')[0].style.color = '#607D8B';
+            this.querySelectorAll('.play-button-container')[0].style.display = 'none';
+            this.querySelectorAll('.song-duration')[0].style.color = '#607D8B';
+        });
+    
+        songElements[i].addEventListener('click', function(){
+            this.querySelectorAll('.play-button-container')[0].style.display = 'none';
+        });
+    }
+    
+    Amplitude.init({
+      "songs": [
+            {
+                "name": "布袋豆腐歌 trance版",
+                "artist": "SUNO AI",
+                "album": "布袋豆腐歌",
+                "url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/audio/%E5%B8%83%E8%A2%8B%E8%B1%86%E8%85%90%E6%AD%8C_trance.mp3",
+                "cover_art_url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
+            },
+            {
+                "name": "布袋豆腐歌 rock版",
+                "artist": "SUNO AI",
+                "album": "布袋豆腐歌",
+                "url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/audio/%E5%B8%83%E8%A2%8B%E8%B1%86%E8%85%90%E6%AD%8C_rock.mp3",
+                "cover_art_url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
+            }
+      ],
+      
+      "callbacks": {
+        'play': function() {
+            document.getElementById('album-art').style.visibility = 'hidden';
+            document.getElementById('large-visualization').style.visibility = 'visible';
+        },
+    
+        'pause': function() {
+            document.getElementById('album-art').style.visibility = 'visible';
+            document.getElementById('large-visualization').style.visibility = 'hidden';
+        }
+      },
+    
+      waveforms: {
+        sample_rate: 50
+      }
+    });
+    </script>
