--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <title>{% if page.title %}{{ page.title }}·{{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   {%- seo title=false -%}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/styles.css">
-  {%- if page.url == '/amp' -%}
+  {%- if page.url == '/' -%}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.css">
     <script src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.js"></script>
     {%- endif -%}
