--- a/_includes/amplitude.html
+++ b/_includes/amplitude.html
@@ -1,3 +1,4 @@
+<!-- Amplitude Player -->
 <div id="amplitude-player">
     <div id="amplitude-left">
         <img data-amplitude-song-info="cover_art_url" class="album-art"/>
