--- a/_includes/amplitude.html
+++ b/_includes/amplitude.html
@@ -21,7 +21,7 @@
         <div id="control-container">
             <div id="repeat-container">
             <div class="amplitude-repeat" id="repeat"></div>
-            <div class="amplitude-shuffle amplitude-shuffle-off" id="shuffle"></div>
+            <div style="display: none!important;" class="amplitude-shuffle amplitude-shuffle-off" id="shuffle"></div>
             </div>
             <div id="central-control-container">
             <div id="central-controls">
@@ -31,12 +31,12 @@
             </div>
             </div>
             <div id="volume-container">
-            <div class="volume-controls">
-                <div class="amplitude-mute amplitude-not-muted"></div>
-                <input type="range" class="amplitude-volume-slider"/>
-                <div class="ms-range-fix"></div>
-            </div>
-            <div class="amplitude-shuffle amplitude-shuffle-off" id="shuffle-right"></div>
+                <div class="volume-controls" style="display: none;">
+                    <div class="amplitude-mute amplitude-not-muted"></div>
+                    <input type="range" class="amplitude-volume-slider"/>
+                    <div class="ms-range-fix"></div>
+                </div>
+                <div style="display: block!important;" class="amplitude-shuffle amplitude-shuffle-off" id="shuffle-right"></div>
             </div>
         </div>
         <div id="meta-container">
