--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   {%- seo title=false -%}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/styles.css">
   {%- if page.url == '/' -%}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.css">
     <script src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.js"></script>
     {%- endif -%}
   {%- feed_meta -%}
