--- a/_includes/amplitude.html
+++ b/_includes/amplitude.html
@@ -83,15 +83,15 @@
                 "name": "布袋豆腐歌 trance版",
                 "artist": "SUNO AI",
                 "album": "布袋豆腐歌",
-                "url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/audio/%E5%B8%83%E8%A2%8B%E8%B1%86%E8%85%90%E6%AD%8C_trance.mp3",
-                "cover_art_url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
+                "url": "https://fastly.jsdelivr.net/gh/budaipro/assets@latest/audio/%E5%B8%83%E8%A2%8B%E8%B1%86%E8%85%90%E6%AD%8C_trance.mp3",
+                "cover_art_url": "https://fastly.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
             },
             {
                 "name": "布袋豆腐歌 rock版",
                 "artist": "SUNO AI",
                 "album": "布袋豆腐歌",
-                "url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/audio/%E5%B8%83%E8%A2%8B%E8%B1%86%E8%85%90%E6%AD%8C_rock.mp3",
-                "cover_art_url": "https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
+                "url": "https://fastly.jsdelivr.net/gh/budaipro/assets@latest/audio/%E5%B8%83%E8%A2%8B%E8%B1%86%E8%85%90%E6%AD%8C_rock.mp3",
+                "cover_art_url": "https://fastly.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
             }
       ],
       
