--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}·{{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   {%- seo title=false -%}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/styles.css">
+  <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/budaipro/assets@latest/styles.css">
   {%- if page.url == '/' -%}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.css">
-    <script src="https://cdn.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.js"></script>
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/budaipro/assets@latest/amplitude.css">
+    <script src="https://fastly.jsdelivr.net/gh/budaipro/assets@latest/amplitude.min.js"></script>
     {%- endif -%}
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
