--- a/_includes/amplitude.html
+++ b/_includes/amplitude.html
@@ -79,6 +79,13 @@
     
     Amplitude.init({
       "songs": [
+             {
+                "name": "布袋豆腐歌",
+                "artist": "SUNO AI",
+                "album": "布袋豆腐歌",
+                "url": "https://fastly.jsdelivr.net/gh/budaipro/assets@latest/audio/1714647425276ljp0hut2 full.mp3",
+                "cover_art_url": "https://fastly.jsdelivr.net/gh/budaipro/assets@latest/amplitude/cover.png"
+            },
             {
                 "name": "布袋豆腐歌 trance版",
                 "artist": "SUNO AI",
