--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}·{{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   {%- seo title=false -%}
-  <link rel="stylesheet" href="https://gcore.jsdelivr.net/gh/budaipro/assets@latest/styles.css">
+  <link rel="stylesheet" href="https://gcore.jsdelivr.net/gh/budaipro/assets/styles.css">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
