--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
+    <style>
+        body {
+            font: 11pt/1.185 arial, simsun, dengxian, sans-serif;
+        }
+
+        .container {
+            max-width: 700px;
+        }
+    </style>
   </head>
   <body>
     <div class="container">
