--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container">
-        <div><a href="/mytests">&lt;&lt;返回</a></div>
+        <div><a href="/1714820740857">&lt;&lt;返回</a></div>
         {{ content }}
     </div>
   </body>
