--- a/assets/main.scss
+++ b/assets/main.scss
@@ -131,7 +131,7 @@ pre {
   white-space: pre;
   width: 100%;
   padding: 0;
-  margin: 0;
+  margin: 1em;
   border: none;
   box-shadow: none;
   background-color: transparent;
