--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,11 @@
   {%- seo title=false -%}
   <link rel="stylesheet" href="/assets/main.css">
   {%- feed_meta -%}
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "m8jv780foi");
+  </script>
 </head>
