--- a/assets/main.scss
+++ b/assets/main.scss
@@ -64,7 +64,7 @@ a, a:hover, a:active, a:visited {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
-  font-family: arial, sans-serif;
+  font-family: arial, simsun, dengxian, sans-serif;
 }
 
 h1 {
