--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav class="navigation-icons">
-  <a class="navigation-icon {%- if page.url == '/' -%} active{%- endif -%}" href="/">
+  <a class="navigation-icon {%- if page.url == '/' -%}&nbsp;active{%- endif -%}" href="/">
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/home_16.png" alt="">
     <span>主页</span>
   </a>
