--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,9 @@
 <nav class="navigation-icons">
-  <a {%- if page.url == '/' -%} class="navigation-icon active"{%- else -%} class="navigation-icon"{%- endif -%} href="/">
+  {%- if page.url == '/' -%}
+  <a class="navigation-icon active" href="/">
+  {%- else -%}
+  <a class="navigation-icon" href="/">
+  {%- endif -%}
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/home_16.png" alt="">
     <span>主页</span>
   </a>
