--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,16 +7,28 @@
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/home_16.png" alt="">
     <span>主页</span>
   </a>
-  <a class="navigation-icon {%- if page.url == '/tofu' -%} active{%- endif -%}" href="/tofu">
+  {%- if page.url == '/tofu' -%}
+  <a class="navigation-icon active" href="/tofu">
+  {%- else -%}
+  <a class="navigation-icon" href="/tofu">
+  {%- endif -%}
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/help_16.png" alt="">
     <span>产品</span>
   </a>
-  <a class="navigation-icon {%- if page.url == '/about' -%} active{%- endif -%}" href="/about">
+  {%- if page.url == '/about' -%}
+  <a class="navigation-icon active" href="/about">
+  {%- else -%}
+  <a class="navigation-icon" href="/about">
+  {%- endif -%}
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/question_16.png" alt="">
     <span>关于</span>
   </a>
   <vr></vr>
-  <a class="navigation-icon {%- if page.url == '/buddha' -%} active{%- endif -%}" href="/buddha">
+  {%- if page.url == '/buddha' -%}
+  <a class="navigation-icon active" href="/buddha">
+  {%- else -%}
+  <a class="navigation-icon" href="/buddha">
+  {%- endif -%}
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/warning_circle_16.png" alt="">
     <span>布袋和尚简介</span>
   </a>
