--- a/assets/main.scss
+++ b/assets/main.scss
@@ -78,6 +78,11 @@ h2 {
   font-style: italic;
 }
 
+h2 .arrow {
+  position: relative;
+  left: -5px;
+}
+
 h3 {
   font-size: 13pt;
   font-weight: normal;
@@ -92,7 +97,7 @@ vr {
 hr {
   margin: 20px 0;
   border: none;
-  border-top: 1px solid #7f7f7f;
+  border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
 }
 
@@ -168,6 +173,7 @@ pre {
 }
 
 .figure img {
+  display: block;
   width: 185px;
   max-width: 100%;
 }
@@ -291,7 +297,7 @@ pre {
 .flex-figure {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 12px;
 }
 
 .flex-figure .figure {
