--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         </div>
         {%- endunless -%}
         <div class="window-body">
-          {%- unless (page.url == "/launch" && page.url == "/inn") -%}{%- include nav.html -%}{%- endunless -%}
+          {%- if (page.url != "/launch" || page.url != "/inn") -%}{%- include nav.html -%}{%- endif -%}
           <div class="document-container">
             <div class="document-cell">
               <div class="inset">
