--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         </div>
         {%- endunless -%}
         <div class="window-body">
-          {%- unless page.url == "/inn"? || page.url == "/launch"? -%}{%- include nav.html -%}{%- endunless -%}
+          {%- unless page.url == "/inn" && page.url == "/launch" -%}{%- include nav.html -%}{%- endunless -%}
           <div class="document-container">
             <div class="document-cell">
               <div class="inset">
