--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <div class="window" aria-label="Content">
         {%- unless page.url == "/inn" -%}
         <div class="title-bar">
-          <strong class="title-bar-text">{{ site.title | escape }}</strong>
+          <a href="/" style="color: white; text-decoration: none;"><strong class="title-bar-text">{{ site.title | escape }}</strong></a>
         </div>
         {%- endunless -%}
         <div class="window-body">
