--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
   <a class="navigation-icon" href="/tofu">
   {%- endif -%}
     <img src="https://gcore.jsdelivr.net/gh/budaipro/assets/img/ico/help_16.png" alt="">
-    <span>豆腐产品</span>
+    <span>豆腐制品</span>
   </a>
   {%- if page.url == '/about' -%}
   <a class="navigation-icon active" href="/about">
