--- a/assets/main.scss
+++ b/assets/main.scss
@@ -132,6 +132,10 @@ dfn {
   cursor: help;
 }
 
+blockquote {
+  margin-left: 1.5em;
+}
+
 pre {
   font: 11pt/1.185 "dejavu sans mono", menlo, consolas, arial, simsun, dengxian, sans-serif;
   white-space: pre;
