--- a/assets/main.scss
+++ b/assets/main.scss
@@ -258,10 +258,9 @@ pre {
 .navigation-icon {
   display: flex;
   flex-direction: column;
+  font-size: 12pt;
   text-align: center;
-  min-width: 50px;
-  min-height: 36px;
-  padding: 4px;
+  padding: 4px 8px;
   cursor: pointer;
 }
 
