--- a/assets/main.scss
+++ b/assets/main.scss
@@ -320,7 +320,7 @@ pre {
 }
 
 .tofu-item {
-  margin: 1em 0;
+  margin-top: -1em;
 }
 
 .tofu-item:after {
@@ -330,7 +330,7 @@ pre {
 }
 
 .tofu-item ul {
-  margin: 0 auto;
+  margin: 1em auto;
   float: left;
 }
 
