--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
   {%- endif -%}
     <span>豆腐制品</span>
   </a>
-  {%- if page.url == '/about' -%}
+  {%- if page.url == '/about' || page.url == '/story' -%}
   <a class="navigation-icon active" href="/about">
   {%- else -%}
   <a class="navigation-icon" href="/about">
