--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         </div>
       {%- endunless -%}
  
-      {%- unless page.url == "/inn" or page.url == "/launch" -%}
+      {%- unless page.url == "/inn" or page.url == "/hezu" -%}
         {%- include nav.html -%}
       {%- endunless -%}
 
